added function to convert csv to pth

--- a/data/data_processing.ipynb
+++ b/data/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "id": "5906c4cb-caab-49d8-9766-66b10921ab7d",
    "metadata": {},
    "outputs": [
@@ -10,19 +10,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in /home/hel/bigData/lib/python3.12/site-packages (2.2.2)\n",
-      "Requirement already satisfied: scikit-learn in /home/hel/bigData/lib/python3.12/site-packages (1.6.1)\n",
-      "Requirement already satisfied: numpy>=1.19.5 in /home/hel/bigData/lib/python3.12/site-packages (from scikit-learn) (2.2.2)\n",
-      "Requirement already satisfied: scipy>=1.6.0 in /home/hel/bigData/lib/python3.12/site-packages (from scikit-learn) (1.15.1)\n",
-      "Requirement already satisfied: joblib>=1.2.0 in /home/hel/bigData/lib/python3.12/site-packages (from scikit-learn) (1.4.2)\n",
-      "Requirement already satisfied: threadpoolctl>=3.1.0 in /home/hel/bigData/lib/python3.12/site-packages (from scikit-learn) (3.5.0)\n"
+      "Requirement already satisfied: numpy in /opt/conda/lib/python3.11/site-packages (2.2.2)\n",
+      "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.11/site-packages (1.6.1)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (2.2.2)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (1.15.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /opt/conda/lib/python3.11/site-packages (from scikit-learn) (3.5.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "25/03/08 11:18:13 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import col, udf, split, array_join, expr, lower\n",
     "!pip install numpy\n",
+    "\n",
     "from pyspark.sql.types import StringType\n",
     "import pyspark.sql.functions as F\n",
     "! pip install scikit-learn\n",
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "id": "09fbadc1-eeb5-4e9b-97cd-2cacfe9b9cd3",
    "metadata": {},
    "outputs": [
@@ -53,7 +64,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     },
     {
@@ -67,7 +78,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 529:=====================================================> (48 + 1) / 49]"
+      "[Stage 7:=======================================================> (48 + 1) / 49]\r"
      ]
     },
     {
@@ -81,7 +92,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     }
    ],
@@ -111,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "id": "c410dfda-c44d-4935-852f-2964a37ab784",
    "metadata": {},
    "outputs": [
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "id": "8a428bd5-0862-4e2a-aa14-59f4857d528f",
    "metadata": {},
    "outputs": [
@@ -179,7 +190,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 539:>                                                      (0 + 15) / 15]"
+      "[Stage 17:=======>                                                  (1 + 7) / 8]\r"
      ]
     },
     {
@@ -193,7 +204,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     }
    ],
@@ -229,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "id": "f1e3d655-6ec6-4b70-b536-99bb93a89782",
    "metadata": {},
    "outputs": [
@@ -264,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "id": "8093dbd2-7e06-4dbb-b0be-ae726d32c765",
    "metadata": {},
    "outputs": [
@@ -272,7 +283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     },
     {
@@ -286,7 +297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     },
     {
@@ -300,7 +311,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     },
     {
@@ -328,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 553:============================================>         (53 + 11) / 64]"
+      "[Stage 31:======================================================> (55 + 2) / 57]\r"
      ]
     },
     {
@@ -342,7 +353,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     }
    ],
@@ -368,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "id": "06b8e5af-468a-4387-8899-20705baf1b55",
    "metadata": {},
    "outputs": [],
@@ -379,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "id": "35aebe26-36cc-452e-af0c-96bb95d6a6f5",
    "metadata": {},
    "outputs": [
@@ -387,7 +398,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 682:======================================================>(63 + 1) / 64]"
+      "[Stage 160:======================================================>(56 + 1) / 57]\r"
      ]
     },
     {
@@ -397,6 +408,7 @@
       "✅ CSV files successfully created with the following row counts and percentages:\n",
       "estp: 176051 rows (1.35%)\n",
       "entj: 1244567 rows (9.52%)\n",
+      "esfj: 386612 rows (2.96%)\n",
       "estj: 185015 rows (1.42%)\n",
       "enfp: 461949 rows (3.53%)\n",
       "istj: 769810 rows (5.89%)\n",
@@ -409,15 +421,14 @@
       "isfp: 323723 rows (2.48%)\n",
       "entp: 813315 rows (6.22%)\n",
       "infp: 908018 rows (6.94%)\n",
-      "esfp: 204347 rows (1.56%)\n",
-      "esfj: 386612 rows (2.96%)\n"
+      "esfp: 204347 rows (1.56%)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     }
    ],
@@ -463,77 +474,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "6e379533-a5e8-4621-a9ca-dfade82612a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install scikit-learn\n",
-    "from pyspark.ml.feature import StringIndexer, OneHotEncoder\n",
-    "from transformers import DistilBertTokenizer\n",
-    "import torch\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from pyspark.ml.feature import StringIndexer, OneHotEncoder\n",
-    "\n",
-    "from pyspark.ml.feature import StringIndexer, OneHotEncoder\n",
-    "\n",
-    "# Drop \"type_indexed\" and \"type_encoded\" columns if they already exist\n",
-    "for col_name in [\"type_indexed\", \"type_encoded\"]:\n",
-    "    if col_name in df_comments_typed.columns:\n",
-    "        df_comments_typed = df_comments_typed.drop(col_name)\n",
-    "\n",
-    "# Apply StringIndexer\n",
-    "indexer = StringIndexer(inputCol=\"type\", outputCol=\"type_indexed\", handleInvalid=\"keep\")\n",
-    "df_comments_typed = indexer.fit(df_comments_typed).transform(df_comments_typed)\n",
-    "\n",
-    "# Apply OneHotEncoder\n",
-    "encoder = OneHotEncoder(inputCol=\"type_indexed\", outputCol=\"type_encoded\")\n",
-    "df_comments_typed = encoder.fit(df_comments_typed).transform(df_comments_typed)\n",
-    "\n",
-    "# Convert Spark DataFrame to Pandas\n",
-    "df_pandas = df_comments_typed.select(\"comment\", \"type_encoded\").limit(5000).toPandas()\n",
-    "df_pandas[\"type_encoded\"] = df_pandas[\"type_encoded\"].apply(lambda x: x.toArray())\n",
-    "df_pandas[\"class_label\"] = df_pandas[\"type_encoded\"].apply(lambda x: x.argmax())\n",
-    "\n",
-    "# Train-Test Split\n",
-    "train_df, test_df = train_test_split(df_pandas, test_size=0.1, stratify=df_pandas[\"class_label\"], random_state=42)\n",
-    "\n",
-    "# Tokenization\n",
-    "tokenizer = DistilBertTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
-    "def tokenize_text(df): \n",
-    "    return tokenizer(df[\"comment\"].tolist(), truncation=True, padding=True, max_length=128, return_tensors=\"pt\")\n",
-    "\n",
-    "train_encodings, test_encodings = map(tokenize_text, [train_df, test_df])\n",
+    "import os\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import torch\n",
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.ml.feature import StringIndexer, OneHotEncoder\n",
+    "from transformers import DistilBertTokenizer\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Convert Pandas arrays to proper NumPy float32 before creating Torch tensors\n",
-    "train_labels, test_labels = map(\n",
-    "    lambda df: torch.tensor(np.stack(df[\"type_encoded\"].values).astype(np.float32)), \n",
-    "    [train_df, test_df]\n",
-    ")\n",
+    "def convert_csv_to_pth(csv_filename, output_prefix=\"pth_data/dataset\"):\n",
     "\n",
-    "# Save datasets\n",
-    "for name, enc, lbl in [(\"train\", train_encodings, train_labels), (\"test\", test_encodings, test_labels)]:\n",
-    "    torch.save({\"input_ids\": enc[\"input_ids\"], \"attention_mask\": enc[\"attention_mask\"], \"labels\": lbl}, f\"{name}_data.pth\", _use_new_zipfile_serialization=False)\n",
+    "    # Load CSV into a Spark DataFrame\n",
+    "    df_spark = spark.read.csv(csv_filename, header=True, inferSchema=True)\n",
     "\n",
-    "print(\"✅ Datasets saved as train_data.pth & test_data.pth\")\n"
+    "    # Check if required columns exist\n",
+    "    if \"type\" not in df_spark.columns or \"post\" not in df_spark.columns:\n",
+    "        raise ValueError(\"CSV file must contain 'type' and 'post' columns.\")\n",
+    "\n",
+    "    # Apply StringIndexer (Convert 'type' into numerical labels)\n",
+    "    indexer = StringIndexer(inputCol=\"type\", outputCol=\"type_indexed\", handleInvalid=\"keep\")\n",
+    "    df_spark = indexer.fit(df_spark).transform(df_spark)\n",
+    "\n",
+    "    # Apply OneHotEncoder (Convert 'type_indexed' into one-hot encoding)\n",
+    "    encoder = OneHotEncoder(inputCol=\"type_indexed\", outputCol=\"type_encoded\")\n",
+    "    df_spark = encoder.fit(df_spark).transform(df_spark)\n",
+    "\n",
+    "    # Convert Spark DataFrame to Pandas\n",
+    "    df_pandas = df_spark.select(\"post\", \"type_encoded\").toPandas()\n",
+    "\n",
+    "    # Convert 'type_encoded' from Spark Vector to NumPy array\n",
+    "    df_pandas[\"type_encoded\"] = df_pandas[\"type_encoded\"].apply(lambda x: x.toArray())\n",
+    "\n",
+    "    # Extract class labels (argmax of one-hot vectors)\n",
+    "    df_pandas[\"class_label\"] = df_pandas[\"type_encoded\"].apply(lambda x: x.argmax())\n",
+    "\n",
+    "    # Train-Test Split\n",
+    "    train_df, test_df = train_test_split(df_pandas, test_size=0.1, stratify=df_pandas[\"class_label\"], random_state=42)\n",
+    "\n",
+    "    # Tokenization with DistilBERT\n",
+    "    tokenizer = DistilBertTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
+    "\n",
+    "    def tokenize_text(df): \n",
+    "        return tokenizer(df[\"post\"].tolist(), truncation=True, padding=True, max_length=128, return_tensors=\"pt\")\n",
+    "\n",
+    "    # Tokenize train and test sets\n",
+    "    train_encodings, test_encodings = map(tokenize_text, [train_df, test_df])\n",
+    "\n",
+    "    # Convert labels to PyTorch tensors (Float32)\n",
+    "    train_labels, test_labels = map(\n",
+    "        lambda df: torch.tensor(np.stack(df[\"type_encoded\"].values).astype(np.float32)), \n",
+    "        [train_df, test_df]\n",
+    "    )\n",
+    "\n",
+    "    # Save datasets\n",
+    "    paths = {}\n",
+    "    for name, enc, lbl in [(\"train\", train_encodings, train_labels), (\"test\", test_encodings, test_labels)]:\n",
+    "        path = f\"{output_prefix}_{name}.pth\"\n",
+    "        torch.save({\"input_ids\": enc[\"input_ids\"], \"attention_mask\": enc[\"attention_mask\"], \"labels\": lbl}, path)\n",
+    "        paths[name] = path\n",
+    "\n",
+    "    print(f\"✅ Datasets saved as {paths['train']} & {paths['test']}\")\n",
+    "    return paths\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "422e5bc2-618b-4308-860f-111825a8e417",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/03/08 12:42:56 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n",
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee56a444a0ea4ab3ba5d61735d0a2125",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer_config.json:   0%|          | 0.00/48.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "599160d8f7c842ffa91bc35045bcf953",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "vocab.txt:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "854495fa44a2473a992dcd8504b0b872",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "tokenizer.json:   0%|          | 0.00/466k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0731bf4087b1466e887f8714bbff063c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/483 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Datasets saved as pth_data/dataset_train.pth & pth_data/dataset_test.pth\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'train': 'pth_data/dataset_train.pth', 'test': 'pth_data/dataset_test.pth'}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# introvert extrivert separation "
+    "convert_csv_to_pth(\"estp1.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "43a96b40-a1fe-48d5-8c3a-df68f5a24ca6",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total samples in dataset: 176051\n",
+      "Total batches: 11004\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "csv_file = \"estp1.csv\"\n",
+    "df_spark = spark.read.csv(csv_file, header=True, inferSchema=True)\n",
+    "\n",
+    "# Count total samples\n",
+    "total_samples = df_spark.count()\n",
+    "print(f\"Total samples in dataset: {total_samples}\")\n",
+    "\n",
+    "# Define batch size (same as what you use in training)\n",
+    "batch_size = 16  # Adjust based on your training setup\n",
+    "\n",
+    "# Calculate number of batches\n",
+    "num_batches = math.ceil(total_samples / batch_size)\n",
+    "print(f\"Total batches: {num_batches}\")\n",
+    "\n",
+    "# Stop Spark session\n",
+    "spark.stop()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43a96b40-a1fe-48d5-8c3a-df68f5a24ca6",
+   "id": "44da0dd0-79b6-460d-8655-bdd9fb5a68ef",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -541,9 +683,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -555,7 +697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
